k8s/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dancing-music
spec:
  rules:
    - host: music.cyrildeschamps.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dancing-music
                port:
                  number: 80
